# rt-lps-mri

./: CMakeLists.txt  INSTALL  README.md  TODO
cmake/: config.h.cmake
examples/: Version.cpp
include/: rt-lps-mri.hpp  rt-mri.hpp
include/rt-lps-mri/: .lps.hpp.swp  lps.hpp  write_lps.hpp
include/rt-lps-mri/acquisition/: adjoint.hpp  forward.hpp
include/rt-lps-mri/core/: .load_data.hpp.swp  coil_aware_nfft.hpp  coil_aware_nft.hpp  direct_nft.hpp  environment_decl.hpp  environment_impl.hpp  load_data.hpp  load_density.hpp  load_paths.hpp  load_sensitivity.hpp  nfft.hpp  nft.hpp  temporal_fft.hpp
include/rt-mri/: nfft.hpp
include/rt-mri/core/: environment_decl.hpp  environment_impl.hpp  nfft.hpp
include/rt-mri/nfft/: adjoint.hpp  forward.hpp
src/core/: global.cpp
tests/: Acquisition.cpp  CoilAwareNFFT.cpp  NFFT.cpp  Reconstruct.cpp  ReconstructPlane.cpp  TemporalFFT.cpp
